--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,1 @@
-<p> Jahnavi is going to colleg evey day in a week and also she love reading books</p>
+<p> Jahnavi is going to colleg evey day in a week and also she love reading books panduuuuu</p>
